# SVGpython

./: .gitignore  Bezier.aux  Bezier.tex  README.md  SVGviewer.py  bezier.py  bezier_function.py  ovoid.py  ovoidDefinitions  ovoidDefinitions.py  pyproject.toml  requirements.txt  svgAffine.py  svgBezier.py  svgEyelid.py  svgOvoid.py  svgwriteExample.ipynb  svgwriteTest.py  test.py
examples/: SVGviewer.py  draw_three_circles.py  svgAffine.py  svgBezier.py  svgEyelid.py  svgOvoid.py  svgwriteTest.py
scripts/: svg2pdf.py
svgpython/: __init__.py  bezier.py  io.py  ovoid.py  ovoidDefinitions.py
